# mix_btv_code

./: .dockerignore  CLAUDE.md  Cargo.toml  README.md  pendencias.md
.github/workflows/: ci.yml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: cache.rs  doctor_console.rs  lsp_console.rs  main.rs  mcp_console.rs  memory_console.rs  prompt_render.rs  rate_limit_gen.rs  sandbox_console.rs  session.rs  skills.rs  squad.rs  squad_agent.rs  test_support.rs  tui_app.rs  web_agent.rs
crates/forge-core/src/: agent_loop.rs  compaction.rs  lib.rs  permission.rs  session.rs
crates/forge-llm/: Cargo.toml
crates/forge-llm/src/: gateway.rs  lib.rs  model_tier.rs  rate_limit.rs  scripted.rs
crates/forge-proto/: Cargo.toml  build.rs
crates/forge-proto/src/: lib.rs
crates/forge-schemas/: Cargo.toml
crates/forge-schemas/src/: experiment.rs  lib.rs  persona.rs  plan.rs  workflow.rs
crates/forge-schemas/tests/: schema_fixtures.rs
crates/forge-server/: Cargo.toml
crates/forge-server/src/: lib.rs
crates/forge-sidecar/: Cargo.toml
crates/forge-sidecar/src/: core_server.rs  lib.rs  memory_client.rs  service.rs  squad_client.rs  supervisor.rs
crates/forge-sidecar/tests/: core_server_inprocess.rs  squad_e2e.rs
crates/forge-store/examples/: seed_ledger.rs  seed_telemetry.rs
crates/forge-store/src/: ledger.rs  lib.rs  prompt_library.rs  rule_store.rs  telemetry.rs
crates/forge-tools/: Cargo.toml
crates/forge-tools/src/: bash.rs  edit.rs  grep.rs  lib.rs  lsp.rs  mcp.rs  read.rs  registry.rs  sandbox.rs  skill.rs
crates/forge-tools/tests/: mcp_integration.rs
crates/forge-tui/: Cargo.toml
crates/forge-tui/src/: lib.rs
crates/forge-verify/: Cargo.toml
crates/forge-verify/src/: config.rs  exec.rs  lib.rs  parsers.rs  prompt_integrity.rs  vetter.rs
crates/forge-verify/tests/: schema_golden.rs
docs/: DECISOES.md  LEVANTAMENTO-UI-DESIGNER.md  PLANO-FASE-6-ONDA-1.md  PLANO-FASE-6-ONDA-2.md  PLANO-FASE-7-frontend-primario.md  PLANO-INTEGRACAO-FRONTEND.md  PLANO-PLATAFORMA-FORGE.md
docs/adr/: 0008-evidencia-de-verificacao-no-squadtask.md  0010-self-hosting-do-verify-no-ci.md  0015-modelo-de-ameaca-do-agente-web.md  0016-dto-de-evento-e-contrato-sse.md  0017-timeout-de-permissao-pendente-fail-closed.md  0018-sessao-ator-unico-e-auditoria-da-matriz-de-permissao.md  0019-sidecar-como-servico-de-longa-duracao.md  0020-topologia-de-processo-do-agente-web.md  0021-autonomia-progressiva-escopo-fase-7.md  0022-memory-service-ponte-memoria-do-squad.md  0023-runtool-ativado-squad-como-executor.md
docs/design_handoff_forge_telas/: README.md
docs/design_handoff_forge_telas/design/: Forge Telas.dc.html
docs/handoff/desenvolvimento/: HANDOFF-BUILDTOVALUE.md
infra/: README.md
infra/ansible/: playbook.yml
infra/docker/: Dockerfile  README.md  docker-compose.yml
infra/k6/: gateway_load.js
infra/terraform/: main.tf
schemas/fixtures/: experiment.v1.json  handoff-event.v1.json  ledger-entry.v1.json  persona.v1.json  plan.v1.json  prompt-template.v1.json  squad-workflow.v1.json  telemetry-event.v1.json
schemas/json/: experiment.v1.schema.json  persona.v1.schema.json  plan.v1.schema.json  squad-workflow.v1.schema.json
schemas/personas/editorial/: fact-checker.json  pauteiro.json  redator.json  revisor-de-estilo.json
schemas/proto/: core.proto  memory.proto  squad.proto
scripts/: gen_proto_py.py
skills/: README.md
skills/uppercase/: skill.toml
skills/word-count/: skill.toml
web/: .gitignore  index.html  package.json  playwright.config.ts  playwright.integration.config.ts  pnpm-lock.yaml  vite.config.ts
web/scripts/: run-integration-server.mjs
web/src/: App.tsx
web/src/api/: client.ts  designer.ts  experiments.ts  ledger.ts  lsp.ts  mcp.ts  memory.ts  modelUsage.ts  models.ts  onboarding.ts  permissions.ts  prompts.ts  providers.ts  ratelimit.ts  sandbox.ts  session.ts  skills.ts  squad.ts  stream.ts  telemetry.ts  verify.ts
web/src/components/primitives/: AsyncStatus.tsx  Badge.tsx  Button.tsx  Card.tsx  Gauge.tsx  Modal.tsx  ProgressBar.tsx  StatTile.tsx  Table.tsx  Toast.tsx
web/src/components/screens/admin/: Experimentos.tsx  Ledger.tsx  Lsp.tsx  Mcp.tsx  Memoria.tsx  Modelos.tsx  Providers.tsx  RateLimits.tsx  Sandbox.tsx  Skills.tsx  Telemetria.tsx  Verify.tsx
web/src/components/screens/user/: Modelo.tsx  Onboarding.tsx  Permissao.tsx  Prompts.tsx  Sessao.tsx  Squad.tsx  Sugestoes.tsx
web/src/components/screens/user/Designer/: Board.tsx  Designer.tsx  EdgesOverlay.tsx  NodeView.tsx  Palette.tsx  PropertiesPanel.tsx  Toolbar.tsx  geometry.test.ts  geometry.ts  reducer.test.ts  reducer.ts  templates.ts
web/src/components/shell/: AccentSwitcher.tsx  PersonaToggle.tsx  Shell.tsx  Sidebar.tsx  ThemeSwitcher.tsx  Topbar.tsx  WindowChrome.tsx
web/src/hooks/: useAsyncAction.test.ts  useAsyncAction.ts  usePolling.ts
web/src/lib/: nav.ts  screenComponents.tsx  screenMeta.ts
web/src/state/: AppContext.tsx  SessionContext.tsx  useTheme.ts
web/src/styles/: global.css  themes.ts
web/src/types/: domain.ts
web/tests/e2e/: designer.spec.ts  shell.spec.ts  theming.spec.ts
web/tests/e2e-integration/: designer-real-backend.spec.ts  doctor-real-backend.spec.ts  experiment-real-backend.spec.ts  ledger-real-backend.spec.ts  lsp-real-backend.spec.ts  mcp-real-backend.spec.ts  memory-real-backend.spec.ts  model-usage-real-backend.spec.ts  permissions-real-backend.spec.ts  providers-real-backend.spec.ts  ratelimit-real-backend.spec.ts  sandbox-real-backend.spec.ts  sessao-real-backend.spec.ts  squad-real-backend.spec.ts  telemetry-real-backend.spec.ts  verify-real-backend.spec.ts
