[workspace]
resolver = "2"
members = [
    "crates/forge-cli",
    "crates/forge-core",
    "crates/forge-llm",
    "crates/forge-proto",
    "crates/forge-schemas",
    "crates/forge-server",
    "crates/forge-sidecar",
    "crates/forge-store",
    "crates/forge-tools",
    "crates/forge-tui",
    "crates/forge-verify",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/danzeroum/mix_btv_code"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
sha2 = "0.10"
hex = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "sync", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
ignore = "0.4"
grep = "0.3"
time = { version = "0.3", features = ["formatting"] }
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
tonic = "0.13"
prost = "0.13"
tonic-build = "0.13"
protoc-bin-vendored = "3.1"
hyper-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
axum = "0.8"
bollard = "0.17"
criterion = { version = "0.5", features = ["html_reports"] }

forge-schemas = { path = "crates/forge-schemas" }
forge-core = { path = "crates/forge-core" }
forge-llm = { path = "crates/forge-llm" }
forge-store = { path = "crates/forge-store" }
forge-tools = { path = "crates/forge-tools" }
forge-verify = { path = "crates/forge-verify" }
forge-tui = { path = "crates/forge-tui" }
forge-proto = { path = "crates/forge-proto" }
forge-sidecar = { path = "crates/forge-sidecar" }
forge-server = { path = "crates/forge-server" }
