[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI da plataforma Forge"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core.workspace = true
forge-llm.workspace = true
forge-schemas.workspace = true
forge-store.workspace = true
forge-tools.workspace = true
forge-tui.workspace = true
forge-sidecar.workspace = true
forge-proto.workspace = true
forge-server.workspace = true
forge-verify.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tonic.workspace = true
tokio.workspace = true
time.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[dev-dependencies]
tempfile.workspace = true
jsonschema = "0.26"
