[package]
name = "forge-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "API local e dashboard de métricas da plataforma Forge (axum) — Fase 3"

[dependencies]
forge-store.workspace = true
forge-verify.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
tempfile.workspace = true
