[package]
name = "forge-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ferramentas determinísticas da plataforma Forge: read, grep, edit, bash"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ignore.workspace = true
grep.workspace = true
bollard.workspace = true
tokio.workspace = true
futures-util.workspace = true
rmcp = { version = "2.1.0", features = ["client", "server", "transport-child-process", "transport-io"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
